public/styles/site/layout.less
// html {
//   position: relative;
//   min-height: 100%;
// }

body {
	background-image: url('../images/website-bg-white-small2.png');
	background-repeat: no-repeat;
	background-size: cover;
	min-height: 1000px;
	// margin-bottom: 220px;
}

#header {
	margin-top: 50px;
	width: 100%;
}

#body {
	width: 100%;
}


// Optional Bootstrap overrides
.container {
	width: 100%;
}

.jumbotron {
	margin-bottom: 0px;
}

.container .jumbotron {
	border-radius: 0px;
}

.carousel {
	position: initial;
}

.carousel-inner > .item > img {
    margin: 0 auto;
}

// owl-wrapper
.owl-wrapper {
	width: 100%;
}

//Index Styles
.index-bg {
	background-image: url('../images/website_bg1.jpg');
	background-repeat: no-repeat;
}

// General Templates Styles

.no-padding {
	padding: 0px;
}

.padding {
	padding: 10px;
}

/**
 * Navbar general
 */
 nav {
   opacity: .9;
 }

 nav:hover {
   opacity: 1;
 }

.navbar {
  border-bottom: 0;
}
.navbar-nav > li > a {
  font-weight: 600;
}
.navbar-brand {
  font-weight: 700;
}
// .navbar-default {
//   padding-top: 20px;
// }
.navbar-inverse {
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.12);
}
/**
 * Navbar separator
 */
.navbar__separator {
  border-left: 1px solid #6c5b7b;
  height: 23px;
  -webkit-transition: border-color 0.5s;
  -o-transition: border-color 0.5s;
  transition: border-color 0.5s;
}
.navbar-inverse .navbar__separator {
  border-color: #eee;
}
/**
 * Sidebar
 */
.wrapper {
	width: 100%;
  box-shadow: 10px 0 10px rgba(0, 0, 0, 0);
  -webkit-transition: margin 0.5s;
  -o-transition: margin 0.5s;
  transition: margin 0.5s;
}
.js-wrapper-aside {
  margin-left: -220px;
  margin-right: 220px;
}
.navbar {
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}
.js-navbar-aside {
  left: -220px;
  right: 220px;
}
.sidebar-toggle{
	padding-right: 10px;
}
/**
 * Sidebar general
 */
.sidebar {
  position: fixed;
  top: 0;
  right: -220px;
  width: 220px;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  background-image: -webkit-linear-gradient(top, #325776 0%, #355c7d 100%);
  background-image: -o-linear-gradient(top, #325776 0%, #355c7d 100%);
  background-image: linear-gradient(to bottom, #325776 0%, #355c7d 100%);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff325776', endColorstr='#ff355c7d', GradientType=0);
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}
.js-sidebar-aside {
  right: 0;
}
.sidebar__wrapper {
  position: relative;
  min-height: 100%;
  height: auto;
  padding-top: 10px;
  padding-bottom: 90px;
}
.sidebar__close {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  padding: 10px;
  text-align: center;
  line-height: 20px;
  color: rgba(255, 255, 255, 0.6);
  cursor: pointer;
}
.sidebar__heading {
  margin: 30px 25px 20px;
  font-size: 13px;
  font-weight: 700;
  color: #c06c84;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
/**
 * Sidebar form
 */
.sidebar__form {
  padding: 30px 25px 20px;
}

.sidebar__btn {
	background-color: #c06c84;
	color: #FFF;
}
/**
 * Sidebar menu
 */
.sidebar__menu {
  list-style: none;
  padding: 0;
  margin: 0;
}
.sidebar__menu > li > a {
  display: block;
  padding: 4px 25px;
  font-weight: 600;
  color: rgba(255, 255, 255, 0.7);
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: color 0.15s;
  -o-transition: color 0.15s;
  transition: color 0.15s;
}
.sidebar__menu > li > a:hover,
.sidebar__menu > li > a:focus {
  color: white;
}
/**
 * Sidebar logo
 */
.sidebar__logo {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 20px 25px;
  text-align: center;
  font-size: 18px;
  font-weight: 600;
  color: rgba(255, 255, 255, 0.1);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
/* Same height columns */
.row-same-height {
  display: table;
  width: 100%;
  table-layout: fixed;
}
.col-sm-height {
	max-height: 550px;
}
@media (min-width: 768px) {
  .col-sm-height {
		max-height: 550px;
  }
}
.col-middle {
	display: inline-block;
	vertical-align: middle;
	float: none;
}

// Heading
.heading__sub {
  text-align: center;
	font-weight: 600;
}

// Hero
// /**
 // * Hero
 // */
/* General */
.hero {
  position: relative;
  padding: 170px 0 100px;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
	color: #fff;
}
.hero::before {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-image: -webkit-linear-gradient(top, rgba(199, 155, 153, 0.4) 0%, rgba(160, 0, 29, 0.7) 100%);
  background-image: -o-linear-gradient(top, rgba(199, 155, 153, 0.4) 0%, rgba(160, 0, 29, 0.7) 100%);
  background-image: linear-gradient(to bottom, rgba(199, 155, 153, 0.4) 0%, rgba(160, 0, 29, 0.7) 100%);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cc6c5b7b', endColorstr='#cc355c7d', GradientType=0);
  content: "";
}
@media (min-width: 768px) {
  .hero {
    padding: 220px 0 150px;
  }
}
.hero__heading {
	font-size: 55px;
}
.hero__btn.btn-link {
  color: rgba(255, 255, 255, 0.9);
}
/* Hero :: Agency */
.hero_agency {
  background-image: url(../images/tga_group.jpg);
	background-repeat: no-repeat;
	text-align: center;
}
.row.limit [class*="col-"]{
  max-height:300px;
  overflow:hidden;
}

/**
 * Portfolio Section
 */
.portfolio__items {
  margin-bottom: 40px;
}
.portfolio__items > div {
  padding-right: 2.5px;
  padding-left: 2.5px;
}
.portfolio__item {
  margin-bottom: 5px;
}
.portfolio-item__img {
  position: relative;
  overflow: hidden;
  cursor: pointer;
}
.portfolio-item__img:hover .portfolio-item__mask {
  background: rgba(255, 255, 255, 0.9);
}
.portfolio-item__img:hover .portfolio-item-mask__content {
  top: 0;
}
.portfolio-item__mask {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0);
  -webkit-transition: background 0.5s;
  -o-transition: background 0.5s;
  transition: background 0.5s;
}
@media (max-width: 767px) {
  .portfolio-item__mask {
    visibility: hidden;
  }
}
.portfolio-item-mask__content {
  position: absolute;
  display: block;
  top: -100%;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 40px 20px;
  overflow: hidden;
  color: #565656;
  text-decoration: none;
  -webkit-transition: top 0.5s;
  -o-transition: top 0.5s;
  transition: top 0.5s;
}
.portfolio-item-mask__title {
  margin-bottom: 20px;
  font-weight: 600;
}
.portfolio-item-mask__summary {
  font-size: 12px;
}
/* Lightbox controls */
/* General */
.lightboxOverlay {
  opacity: 1;
  filter: alpha(opacity=100);
  background-color: rgba(0, 0, 0, 0.6);
}
.lb-outerContainer {
  border-radius: 0;
}
/* Loading */
.lb-cancel {
  background: url(../img/loading.gif) no-repeat;
}
/* Previous & next slides */
.lb-nav a.lb-prev,
.lb-nav a.lb-next {
  position: relative;
  width: 10%;
  background: none;
  color: white;
}
.lb-nav a.lb-prev:hover,
.lb-nav a.lb-next:hover,
.lb-nav a.lb-prev:focus,
.lb-nav a.lb-next:focus {
  text-decoration: none;
}
.lb-nav a.lb-prev::before,
.lb-nav a.lb-next::before {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -12px;
  margin-left: -12px;
  font-family: "Icons";
  font-size: 24px;
}
.lb-nav a.lb-prev::before {
  content: "\e035";
}
.lb-nav a.lb-next::before {
  content: "\e036";
}
/* Close */
.lb-data .lb-close {
  position: relative;
  background: none;
  color: white;
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transition: none;
  -o-transition: none;
  transition: none;
}
.lb-data .lb-close:hover,
.lb-data .lb-close:focus {
  text-decoration: none;
}
.lb-data .lb-close::before {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -7.5px;
  margin-left: -7.5px;
  content: "\e0db";
  font-family: "Icons";
}
.lego{
	height: 100px;
}

/**
 * Team
 */
.team__item {
  margin-bottom: 40px;
}
.team-item__img {
  margin-bottom: 20px;
  overflow: hidden;
}
.team-item__img > img {
  border-radius: 3px;
  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
@media (min-width: 768px) {
  .team__item:hover .team-item__img > img {
    -webkit-transform: rotate(-5deg) scale(1.1, 1.1);
    -ms-transform: rotate(-5deg) scale(1.1, 1.1);
    transform: rotate(-5deg) scale(1.1, 1.1);
  }
}
.team-item-contact__link {
  display: block;
  float: left;
  width: 50%;
  margin-top: 4.6px;
  margin-bottom: 4.6px;
  border-radius: 3px 0 0 3px;
  text-align: center;
  line-height: 36.8px;
  background-color: #eee;
  color: #565656;
  text-decoration: none;
  -webkit-transition: all 0.15s;
  -o-transition: all 0.15s;
  transition: all 0.15s;
}
.team-item-contact__link:hover,
.team-item-contact__link:focus {
  background: #55acee;
  color: white;
}
.team-item-contact__link_facebook {
  border-left: 1px solid white;
  border-radius: 0 3px 3px 0;
}
.team-item-contact__link_facebook:hover,
.team-item-contact__link_facebook:focus {
  background: #3b5998;
}
.team-item__name {
  font-weight: 700;
}
.team-item__position {
  margin-bottom: 10px;
  color: #9a9a9a;
}

// Footer
#footer {
	// position: absolute;
	// height: 220px;
	bottom: 0px;
	// margin-top: 30px;
	border-top: 1px solid @gray-light;
	padding-top: 30px;
	color: @gray-light;
	// background-color: #eee;
	line-height: 30px;
	text-align: center;
	width: 100%;
}

footer a {
  color: #9a9a9a;
}
.footer__social {
  margin-top: 20px;
}
.footer-social__link {
  display: inline-block;
  width: 30px;
  height: 30px;
  border-radius: 3px;
  background-color: #bbb;
  text-align: center;
  color: #eee;
  -webkit-transition: all 0.15s;
  -o-transition: all 0.15s;
  transition: all 0.15s;
}
.footer-social__link:hover,
.footer-social__link:focus {
  color: white;
}
.footer-social__link_twitter:hover {
  background-color: #55acee;
}
.footer-social__link_facebook:hover {
  background-color: #3b5998;
}

@media (min-width: 768px) {
  footer {
    text-align: left;
  }
  .footer__social {
    margin-top: 0;
    text-align: right;
  }
}

@media (max-width: @screen-xs-min) {
	#footer {
		// background-color: #fff;
		height: 165px;
	}

	// .index-bg {
	// 	background-image: none;
	// 	background-color: #838383;
	// }

}

